--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+
+/* #root {
+  min-height: 100vh;
+  box-sizing: border-box;
+}
+
+.App{
+  width: 100%;
+  height: 100%;
+}
+
+.Home{
+  width: 100%;
+  height: 100%;
+} */
